@@ -13,6 +13,12 @@ if ENABLE_FIXED
   FIXED_D_LIB = $(top_builddir)/@PACKAGE@/fixed/libfixed_debug.la
 endif
 
+if ENABLE_OPTIM
+  OPTIM_DIR = optim
+  OPTIM_LIB = $(top_builddir)/@PACKAGE@/optim/liboptim.la
+  OPTIM_D_LIB = $(top_builddir)/@PACKAGE@/optim/liboptim_debug.la
+endif
+
 if ENABLE_PROTOCOL
   PROTOCOL_DIR = protocol
   PROTOCOL_LIB = $(top_builddir)/@PACKAGE@/protocol/libprotocol.la
@@ -37,8 +43,8 @@ if ENABLE_STAT
   STAT_D_LIB = $(top_builddir)/@PACKAGE@/stat/libstat_debug.la
 endif
 
-SUBDIRS = base $(COMM_DIR) $(FIXED_DIR) $(PROTOCOL_DIR) $(SIGNAL_DIR) \
-	$(SRCCODE_DIR) $(STAT_DIR)
+SUBDIRS = base $(COMM_DIR) $(FIXED_DIR) $(OPTIM_DIR) $(PROTOCOL_DIR) \
+	$(SIGNAL_DIR) $(SRCCODE_DIR) $(STAT_DIR)
 
 EXTRA_DIST = config_msvc.h
 
@@ -52,16 +58,16 @@ nodist_EXTRA_lib@PACKAGE@_la_SOURCES = dummy.cxx
 lib@PACKAGE@_la_SOURCES = 
 lib@PACKAGE@_la_LDFLAGS = -version-info $(GENERIC_LIBRARY_VERSION)
 lib@PACKAGE@_la_LIBADD = $(top_builddir)/@PACKAGE@/base/libbase.la \
-	$(COMM_LIB) $(FIXED_LIB) $(PROTOCOL_LIB) $(SIGNAL_LIB) $(SRCCODE_LIB) \
-	$(STAT_LIB)
+	$(COMM_LIB) $(FIXED_LIB) $(OPTIM_LIB) $(PROTOCOL_LIB) $(SIGNAL_LIB) \
+	$(SRCCODE_LIB) $(STAT_LIB)
 
 # Dummy C++ source to cause C++ linking
 nodist_EXTRA_lib@PACKAGE@_debug_la_SOURCES = dummy.cxx
 lib@PACKAGE@_debug_la_SOURCES = 
 lib@PACKAGE@_debug_la_LDFLAGS = -version-info $(GENERIC_LIBRARY_VERSION)
 lib@PACKAGE@_debug_la_LIBADD = $(top_builddir)/@PACKAGE@/base/libbase_debug.la \
-	$(COMM_D_LIB) $(FIXED_D_LIB) $(PROTOCOL_D_LIB) $(SIGNAL_D_LIB) \
-	$(SRCCODE_D_LIB) $(STAT_D_LIB)
+	$(COMM_D_LIB) $(FIXED_D_LIB) $(OPTIM_D_LIB) $(PROTOCOL_D_LIB) \
+	$(SIGNAL_D_LIB) $(SRCCODE_D_LIB) $(STAT_D_LIB)
 
 nobase_pkginclude_HEADERS = $(h_sources)
 nobase_nodist_pkginclude_HEADERS = $(top_builddir)/@PACKAGE@/config.h
