@@ -1,0 +1,5 @@
+h_optim_sources = \
+	$(top_srcdir)/itpp/optim/newton_search.h
+
+cpp_optim_sources = \
+	$(top_srcdir)/itpp/optim/newton_search.cpp
